# Encode_AI

./: .gitignore  Procfile  README.md  RENDER_DEPLOYMENT.md  __init__.py  blog_assistant.html  blog_generator.py  deploy.sh  depoy.sh  generate_route.py  generate_route.sh  generate_toute.sh  index.html  main.ipynb  main.py  map_utils.py  openai.ipynb  package-lock.json  portia.ipynb  pyproject.toml  render.yaml  requirements.txt  route_Brighton_to_London.json  route_generation.html  route_generator.py  route_visualization.html  serve_survey.py  setup_render.sh  setup_windows.bat  start.sh  start_survey.py  start_wandermatch.bat  start_wandermatch.py  start_wandermatch_survey.bat  start_web_survey.bat  storage.Dockerfile  survey_launcher.html  test.py  test_api_endpoint.py  test_embed.py  (+8 more)
Gemini_TravelingRoute_Recommendation_V1/: .env.example  README.md  RouteGenerator_Hybrid.py  check_env.py  enhanced_visualization.py  main.py  requirements.txt  route_Bristol_to_Bath.json  route_London_to_Bath.json  route_London_to_Cardiff.json  route_San_Francisco,_CA_to_Palo_Alto,_CA.json  route_validator.py  route_visualization.html  test_basic_visualization.html  test_route_data.json  test_visualization.py  visualize_route.py
Portia_Blog_Assistant_V1/: .env.example  LICENSE  README.md  main.py  requirements.txt
UserInfo_and_Match/: README.md
cache/: user_pool_embeddings.pkl
deploy/: README.md  package.json  run_deployment.py  setup_render.sh  verify_setup.py
get_user_info/: README.md  SERVER_MANAGEMENT.md  embed_info.py  final_test.py  run_info.py  server.py  start_server.py  (+1 more)
(+107 files in other folders)
