[tool.poetry]
name = "wander-match"
version = "0.1.0"
description = ""
authors = ["TongmengXie <ucfntxi@ucl.ac.uk>"]
readme = "README.md"
packages = [
    { include = "wander_match" }
]

[tool.poetry.dependencies]
python = "3.12.9"
pandas = "2.0.0"
numpy = "1.26.3"
requests = "2.28.2"
python-dotenv = "1.0.0"
openai = "1.3.0"
google-generativeai = "0.3.0"
flask = "2.3.2"
flask-cors = "4.0.0"
markdown = "3.4.3"
gunicorn = "20.1.0"
rich = "^14.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
